--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,1 +1,49 @@
-{"name":"api-server","version":"1.0.0","main":"server/server.js","engines":{"node":">=6"},"scripts":{"lint":"eslint .","start":"node server/server.js","posttest":"npm run lint && nsp check","test":"NODE_ENV=testing npm run start"},"dependencies":{"@mean-expert/boot-script":"^1.0.0","@mean-expert/loopback-component-realtime":"^1.0.2","@mean-expert/loopback-sdk-builder":"^2.3.1","@mean-expert/loopback-stats-mixin":"^1.2.3","@mean-expert/model":"^1.0.9","@types/mocha":"^5.2.7","@types/node":"^12.7.1","chai":"^4.2.0","compression":"^1.0.3","cookie-parser":"^1.4.4","cors":"^2.5.2","helmet":"^3.11.0","loopback":"^3.22.0","loopback-boot":"^2.6.5","loopback-component-explorer":"^6.4.0","loopback-connector-mongodb":"^4.2.0","loopback-ds-timestamp-mixin":"^3.4.1","mocha":"^6.1.4","serve-favicon":"^2.0.1","strong-error-handler":"^2.0.0","supertest":"^3.4.2","ts-node":"^8.3.0","typescript":"^3.5.3"},"devDependencies":{"eslint":"^3.17.1","eslint-config-loopback":"^8.0.0"},"repository":{"type":"","url":""},"license":"UNLICENSED","description":"api-server"}
+{
+  "name": "api-server",
+  "version": "1.0.0",
+  "main": "server/server.js",
+  "engines": {
+    "node": ">=6"
+  },
+  "scripts": {
+    "lint": "eslint .",
+    "start": "node server/server.js",
+    "posttest": "npm run lint && nsp check",
+    "test": "NODE_ENV=testing npm run start"
+  },
+  "dependencies": {
+    "@mean-expert/boot-script": "^1.0.0",
+    "@mean-expert/loopback-component-realtime": "^1.0.2",
+    "@mean-expert/loopback-sdk-builder": "^2.3.1",
+    "@mean-expert/loopback-stats-mixin": "^1.2.3",
+    "@mean-expert/model": "^1.0.9",
+    "@types/mocha": "^5.2.7",
+    "@types/node": "^12.7.2",
+    "chai": "^4.2.0",
+    "compression": "^1.7.4",
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
+    "helmet": "^3.20.0",
+    "loopback": "^3.26.0",
+    "loopback-boot": "^2.28.0",
+    "loopback-component-explorer": "^6.4.0",
+    "loopback-connector-mongodb": "^4.2.0",
+    "loopback-ds-timestamp-mixin": "^3.4.1",
+    "mocha": "^6.2.0",
+    "serve-favicon": "^2.5.0",
+    "strong-error-handler": "^2.3.2",
+    "supertest": "^3.4.2",
+    "ts-node": "^8.3.0",
+    "typescript": "^3.5.3"
+  },
+  "devDependencies": {
+    "eslint": "^3.17.1",
+    "eslint-config-loopback": "^8.0.0"
+  },
+  "repository": {
+    "type": "",
+    "url": ""
+  },
+  "license": "UNLICENSED",
+  "description": "api-server"
+}
