--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -1,6 +1,7 @@
 {
   "name": "api-server",
   "version": "1.0.0",
+  "author": "juliancuni",
   "main": "server/server.js",
   "engines": {
     "node": ">=6"
@@ -44,6 +45,6 @@
     "type": "",
     "url": ""
   },
-  "license": "UNLICENSED",
-  "description": "api-server"
+  "license": "MIT",
+  "description": "AutoMotive api-server"
 }
