--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "angle",
-  "version": "0.0.0",
-  "description": "Angle - Bootstrap Admin Template",
+  "name": "webapp",
+  "version": "1.0.0",
+  "description": "Webapp - AutoMotive",
   "author": "@themicon_co",
   "license": "https://wrapbootstrap.com/help/licenses",
   "private": true,
