--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -72,6 +72,7 @@
     "rxjs-compat": "6.1.0",
     "screenfull": "3.3.3",
     "simple-line-icons": "2.4.1",
+    "socket.io-client": "^2.2.0",
     "source-sans-pro": "2.40.0",
     "spinkit": "1.2.5",
     "summernote": "0.8.10",
