--- a/BackEnd/server/model-config.json
+++ b/BackEnd/server/model-config.json
@@ -1,53 +1,1 @@
-{
-    "_meta": {
-        "sources": [
-            "loopback/common/models",
-            "loopback/server/models",
-            "../common/models",
-            "./models"
-        ],
-        "mixins": [
-            "loopback/common/mixins",
-            "loopback/server/mixins",
-            "../common/mixins",
-            "./mixins",
-            "../node_modules/@mean-expert/loopback-stats-mixin/dist",
-            "../node_modules/@mean-expert/loopback-component-realtime/dist/mixins",
-            "../node_modules/loopback-ds-timestamp-mixin"
-        ]
-    },
-    "User": {
-        "dataSource": "MongoAtlas",
-        "public": false
-    },
-    "AccessToken": {
-        "dataSource": "MongoAtlas",
-        "public": false
-    },
-    "ACL": {
-        "dataSource": "MongoAtlas",
-        "public": true
-    },
-    "RoleMapping": {
-        "dataSource": "MongoAtlas",
-        "public": false,
-        "options": {
-            "strictObjectIDCoercion": true
-        }
-    },
-    "Role": {
-        "dataSource": "MongoAtlas",
-        "public": true
-    },
-    "Email": {
-        "dataSource": "Email"
-    },
-    "amUser": {
-        "dataSource": "MongoAtlas",
-        "public": true
-    },
-    "org": {
-        "dataSource": "MongoAtlas",
-        "public": true
-    }
-}
+{"_meta":{"sources":["loopback/common/models","loopback/server/models","../common/models","./models"],"mixins":["loopback/common/mixins","loopback/server/mixins","../common/mixins","./mixins","../node_modules/@mean-expert/loopback-stats-mixin/dist","../node_modules/@mean-expert/loopback-component-realtime/dist/mixins","../node_modules/loopback-ds-timestamp-mixin"]},"User":{"dataSource":"MongoAtlas","public":false},"AccessToken":{"dataSource":"MongoAtlas","public":false},"ACL":{"dataSource":"MongoAtlas","public":true},"RoleMapping":{"dataSource":"MongoAtlas","public":false,"options":{"strictObjectIDCoercion":true}},"Role":{"dataSource":"MongoAtlas","public":true},"Email":{"dataSource":"Email"},"amUser":{"dataSource":"MongoAtlas","public":true},"org":{"dataSource":"MongoAtlas","public":true}}
