--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -62,7 +62,7 @@
     "ng2-material-dropdown": "0.10.1",
     "ng2-table": "1.3.2",
     "ng2-validation": "4.2.0",
-    "ngx-bootstrap": "4.2.0",
+    "ngx-bootstrap": "^5.1.1",
     "ngx-chips": "2.0.0-beta.0",
     "ngx-color-picker": "7.0.2",
     "ngx-infinite-scroll": "6.0.1",
