--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -21,11 +21,13 @@
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
     "@angular/core": "8.0.0",
-    "@angular/forms": "8.0.0",
+    "@angular/forms": "^8.0.0",
     "@angular/platform-browser": "8.0.0",
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/router": "8.0.0",
     "@fortawesome/fontawesome-free": "5.5.0",
+    "@ngx-formly/bootstrap": "^5.4.0",
+    "@ngx-formly/core": "^5.4.0",
     "@ngx-translate/core": "11.0.1",
     "@ngx-translate/http-loader": "4.0.0",
     "@swimlane/ngx-datatable": "15.0.0",
