User Profile completed (with uploads)

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ lerna-debug.log*
 datasources.json
 # Media Editing Folder
 media_edit
+# FileServer NESTJS
+FileServer
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
