--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -24,11 +24,12 @@
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.4",
     "cors": "^2.8.5",
+    "growl": "^1.10.5",
     "helmet": "^3.20.0",
     "loopback": "^3.26.0",
     "loopback-boot": "^3.3.1",
     "loopback-component-explorer": "^6.4.0",
-    "loopback-connector-mongodb": "^5.0.0",
+    "loopback-connector-mongodb": "github:juliancuni/loopback-connector-mongodb#mongo_DeprecationWarning",
     "loopback-ds-timestamp-mixin": "^3.4.1",
     "mocha": "^6.2.0",
     "serve-favicon": "^2.5.0",
