--- a/BackEnd/server/model-config.json
+++ b/BackEnd/server/model-config.json
@@ -49,5 +49,9 @@
   "org": {
     "dataSource": "MongoAtlas",
     "public": true
+  },
+  "Client": {
+    "dataSource": "MongoAtlas",
+    "public": true
   }
 }
