--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,8 @@ lerna-debug.log*
 datasources.json
 # Media Editing Folder
 media_edit
+# Angular Dist Folder
+dist
 # FileServer Express
 Files
 app.config.ts
