FrontEnd global httpErrors

--- a/BackEnd/server/model-config.json
+++ b/BackEnd/server/model-config.json
@@ -53,5 +53,9 @@
   "Klient": {
     "dataSource": "MongoAtlas",
     "public": true
+  },
+  "Menu": {
+    "dataSource": "MongoAtlas",
+    "public": true
   }
 }
