Backend (diagnoza, kat-sherbimesh, pjese-kembimi, urdher-diagnoze, diagnoza, urdher-pune)

--- a/BackEnd/server/model-config.json
+++ b/BackEnd/server/model-config.json
@@ -73,5 +73,25 @@
   "KlientPerfaqesuesMapper": {
     "dataSource": "MongoLocal",
     "public": false
+  },
+  "UrdherDiagnoze": {
+    "dataSource": "MongoLocal",
+    "public": true
+  },
+  "KategoriSherbimesh": {
+    "dataSource": "MongoLocal",
+    "public": true
+  },
+  "Diagnoza": {
+    "dataSource": "MongoLocal",
+    "public": true
+  },
+  "PjeseKembimi": {
+    "dataSource": "MongoLocal",
+    "public": true
+  },
+  "UrdherPune": {
+    "dataSource": "MongoLocal",
+    "public": true
   }
 }
