--- a/BackEnd/server/model-config.json
+++ b/BackEnd/server/model-config.json
@@ -101,5 +101,9 @@
   "LiberMjeti": {
     "dataSource": "MongoLocal",
     "public": true
+  },
+  "KlientFinanca": {
+    "dataSource": "MsSql",
+    "public": true
   }
 }
