--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webapp",
-  "version": "0.6.2",
+  "version": "0.7.0",
   "description": "Webapp - AutoMotive",
   "author": "@themicon_co",
   "license": "https://wrapbootstrap.com/help/licenses",
@@ -18,6 +18,7 @@
   "dependencies": {
     "@agm/core": "1.0.0-beta.5",
     "@angular/animations": "8.0.0",
+    "@angular/cdk": "^8.1.4",
     "@angular/common": "8.0.0",
     "@angular/compiler": "8.0.0",
     "@angular/core": "8.0.0",
