--- a/BackEnd/server/model-config.json
+++ b/BackEnd/server/model-config.json
@@ -105,5 +105,9 @@
   "KlientFinanca": {
     "dataSource": "MsSql",
     "public": true
+  },
+  "kategoriKontrollesh": {
+    "dataSource": "MongoLocal",
+    "public": true
   }
 }
