--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webapp",
-  "version": "0.7.3",
+  "version": "0.6.0",
   "description": "Webapp - AutoMotive",
   "author": "@themicon_co",
   "license": "https://wrapbootstrap.com/help/licenses",
@@ -16,105 +16,105 @@
     "e2e": "ng e2e"
   },
   "dependencies": {
-    "@agm/core": "1.0.0-beta.5",
-    "@angular/animations": "8.0.0",
-    "@angular/cdk": "^8.1.4",
-    "@angular/common": "8.0.0",
-    "@angular/compiler": "8.0.0",
-    "@angular/core": "8.0.0",
-    "@angular/forms": "^8.0.0",
-    "@angular/platform-browser": "8.0.0",
-    "@angular/platform-browser-dynamic": "8.0.0",
-    "@angular/router": "8.0.0",
-    "@fortawesome/fontawesome-free": "5.5.0",
-    "@ng-bootstrap/ng-bootstrap": "^5.1.1",
-    "@ngx-formly/bootstrap": "^5.4.0",
-    "@ngx-formly/core": "^5.4.0",
+    "@agm/core": "^1.1.0",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
+    "@fortawesome/fontawesome-free": "^5.11.2",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@ngx-formly/bootstrap": "^5.5.6",
+    "@ngx-formly/core": "^5.5.6",
     "@ngx-loading-bar/core": "^4.2.0",
     "@ngx-loading-bar/router": "^4.2.0",
-    "@ngx-translate/core": "11.0.1",
-    "@ngx-translate/http-loader": "4.0.0",
-    "@swimlane/ngx-datatable": "15.0.0",
-    "ag-grid-angular": "19.1.2",
-    "ag-grid-community": "19.1.3",
-    "angular-tree-component": "8.0.0",
-    "angular2-text-mask": "9.0.0",
-    "angular2-toaster": "7.0.0",
-    "bootstrap": "4.3.1",
-    "chart.js": "2.7.3",
-    "classlist.js": "1.1.20150312",
-    "codemirror": "5.42.0",
-    "core-js": "2.5.4",
-    "easy-pie-chart": "2.1.7",
-    "enhanced-resolve": "3.3.0",
-    "flot": "themicon/flot",
-    "fullcalendar": "3.9.0",
-    "ika.jvectormap": "themicon/ika.jvectormap",
-    "intl": "1.2.5",
-    "jqcloud2": "2.0.3",
-    "jquery": "3.4.1",
-    "jquery-slimscroll": "1.3.8",
-    "jquery-sparkline": "2.4.0",
-    "jquery.browser": "0.1.0",
-    "jquery.flot.spline": "themicon/jquery.flot.spline",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
+    "@swimlane/ngx-datatable": "^16.0.2",
+    "ag-grid-angular": "^22.0.0",
+    "ag-grid-community": "^22.0.0",
+    "angular-tree-component": "^8.5.1",
+    "angular2-text-mask": "^9.0.0",
+    "angular2-toaster": "^8.0.0",
+    "bootstrap": "^4.3.1",
+    "chart.js": "^2.9.3",
+    "classlist.js": "^1.1.20150312",
+    "codemirror": "^5.49.2",
+    "core-js": "^3.4.2",
+    "easy-pie-chart": "^2.1.7",
+    "enhanced-resolve": "^4.1.1",
+    "flot": "github:themicon/flot",
+    "fullcalendar": "^3.10.1",
+    "ika.jvectormap": "^1.0.0",
+    "intl": "^1.2.5",
+    "jqcloud2": "^2.0.3",
+    "jquery": "^3.4.1",
+    "jquery-slimscroll": "^1.3.8",
+    "jquery-sparkline": "^2.4.0",
+    "jquery.browser": "^0.1.0",
+    "jquery.flot.spline": "github:themicon/flot",
     "jquery.flot.tooltip": "github:krzysu/flot.tooltip",
     "lodash": "^4.17.15",
-    "modernizr": "3.7.1",
-    "moment": "2.22.2",
-    "ng2-charts": "1.6.0",
-    "ng2-dnd": "5.0.2",
-    "ng2-file-upload": "1.3.0",
-    "ng2-img-cropper": "0.9.0",
-    "ng2-material-dropdown": "0.10.1",
-    "ng2-table": "1.3.2",
-    "ng2-validation": "4.2.0",
-    "ngx-bootstrap": "^5.1.1",
-    "ngx-chips": "2.0.0-beta.0",
-    "ngx-color-picker": "7.0.2",
-    "ngx-infinite-scroll": "6.0.1",
-    "ngx-select-ex": "3.6.7",
-    "popper.js": "1.14.3",
-    "rxjs": "6.4.0",
-    "rxjs-compat": "6.1.0",
-    "screenfull": "3.3.3",
-    "simple-line-icons": "2.4.1",
-    "socket.io-client": "^2.2.0",
-    "source-sans-pro": "2.40.0",
-    "spinkit": "1.2.5",
-    "summernote": "0.8.10",
-    "sweetalert": "2.1.2",
-    "ts-helpers": "1.1.1",
-    "tslib": "1.9.0",
+    "modernizr": "^3.8.0",
+    "moment": "^2.24.0",
+    "ng2-charts": "^2.3.0",
+    "ng2-dnd": "^5.0.2",
+    "ng2-file-upload": "^1.4.0",
+    "ng2-img-cropper": "^0.9.0",
+    "ng2-material-dropdown": "^0.11.0",
+    "ng2-table": "^1.3.2",
+    "ng2-validation": "^4.2.0",
+    "ngx-bootstrap": "^5.2.0",
+    "ngx-chips": "^2.1.0",
+    "ngx-color-picker": "^8.2.0",
+    "ngx-infinite-scroll": "^8.0.1",
+    "ngx-select-ex": "^3.7.3",
+    "popper.js": "^1.16.0",
+    "rxjs": "^6.5.3",
+    "rxjs-compat": "^6.5.3",
+    "screenfull": "^5.0.0",
+    "simple-line-icons": "^2.4.1",
+    "socket.io-client": "^2.3.0",
+    "source-sans-pro": "^3.6.0",
+    "spinkit": "^2.0.1",
+    "summernote": "^0.8.12",
+    "sweetalert": "^2.1.2",
+    "ts-helpers": "^1.1.2",
+    "tslib": "^1.10.0",
     "ubuntu-fontface": "^0.1.13",
-    "weather-icons": "github:erikflowers/weather-icons",
-    "web-animations-js": "2.2.1",
-    "zone.js": "0.9.1"
+    "weather-icons": "^1.3.2",
+    "web-animations-js": "^2.3.2",
+    "zone.js": "^0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "0.800.0",
-    "@angular/cli": "8.0.0",
-    "@angular/compiler-cli": "8.0.0",
-    "@angular/language-service": "8.0.0",
-    "@types/node": "10.12.3",
-    "@types/codemirror": "0.0.67",
-    "@types/jasmine": "3.3.8",
-    "@types/jasminewd2": "2.0.3",
-    "@types/lodash": "4.14.118",
-    "codelyzer": "5.0.0",
-    "jasmine-core": "3.4.0",
-    "jasmine-spec-reporter": "4.2.1",
-    "karma": "4.1.0",
-    "karma-chrome-launcher": "2.2.0",
-    "karma-cli": "1.0.1",
-    "karma-coverage-istanbul-reporter": "2.0.5",
-    "karma-jasmine": "2.0.1",
-    "karma-jasmine-html-reporter": "1.4.0",
-    "karma-read-json": "1.1.0",
-    "loaders.css": "0.1.2",
-    "protractor": "5.4.0",
-    "ts-node": "7.0.0",
-    "tslint": "5.16.0",
-    "typescript": "3.4.3",
-    "webdriver-manager": "10.2.5"
+    "@angular-devkit/build-angular": "^0.803.19",
+    "@angular/cli": "^8.3.19",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
+    "@types/codemirror": "0.0.80",
+    "@types/jasmine": "^3.5.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/lodash": "^4.14.149",
+    "@types/node": "^12.12.12",
+    "codelyzer": "^5.2.0",
+    "jasmine-core": "^3.5.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^4.4.1",
+    "karma-chrome-launcher": "^3.1.0",
+    "karma-cli": "^2.0.0",
+    "karma-coverage-istanbul-reporter": "^2.1.1",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-read-json": "^1.1.0",
+    "loaders.css": "^0.1.2",
+    "protractor": "^5.4.2",
+    "ts-node": "^8.5.2",
+    "tslint": "^5.20.1",
+    "typescript": "^3.5.3",
+    "webdriver-manager": "^12.1.7"
   }
 }
